@@ -1062,28 +1062,23 @@ item: If/While Statement
   Flags=00001010
 end
 item: Install File
-  Source=${__TCLBASEDIR__}\library\msgcat1.0\pkgIndex.tcl
-  Destination=%MAINDIR%\lib\tcl%VER%\msgcat1.0\pkgIndex.tcl
+  Source=${__TCLBASEDIR__}\library\msgcat\pkgIndex.tcl
+  Destination=%MAINDIR%\lib\tcl%VER%\msgcat1.2\pkgIndex.tcl
   Flags=0000000010000010
 end
 item: Install File
-  Source=${__TCLBASEDIR__}\library\msgcat1.0\msgcat.tcl
-  Destination=%MAINDIR%\lib\tcl%VER%\msgcat1.0\msgcat.tcl
+  Source=${__TCLBASEDIR__}\library\msgcat\msgcat.tcl
+  Destination=%MAINDIR%\lib\tcl%VER%\msgcat1.2\msgcat.tcl
   Flags=0000000010000010
 end
 item: Install File
-  Source=${__TCLBASEDIR__}\library\tcltest1.0\pkgIndex.tcl
-  Destination=%MAINDIR%\lib\tcl%VER%\tcltest1.0\pkgIndex.tcl
+  Source=${__TCLBASEDIR__}\library\tcltest\pkgIndex.tcl
+  Destination=%MAINDIR%\lib\tcl%VER%\tcltest2.0\pkgIndex.tcl
   Flags=0000000000000010
 end
 item: Install File
-  Source=${__TCLBASEDIR__}\library\tcltest1.0\tcltest.tcl
-  Destination=%MAINDIR%\lib\tcl%VER%\tcltest1.0\tcltest.tcl
-  Flags=0000000000000010
-end
-item: Install File
-  Source=${__TCLBASEDIR__}\library\tcltest1.0\tcltest2.tcl
-  Destination=%MAINDIR%\lib\tcl%VER%\tcltest1.0\tcltest2.tcl
+  Source=${__TCLBASEDIR__}\library\tcltest\tcltest.tcl
+  Destination=%MAINDIR%\lib\tcl%VER%\tcltest2.0\tcltest.tcl
   Flags=0000000000000010
 end
 item: Install File
@@ -1432,22 +1427,22 @@ item: Install File
   Flags=0000000000000010
 end
 item: Install File
-  Source=${__TCLBASEDIR__}\library\opt0.4\pkgIndex.tcl
+  Source=${__TCLBASEDIR__}\library\opt\pkgIndex.tcl
   Destination=%MAINDIR%\lib\tcl%VER%\opt0.4\pkgIndex.tcl
   Flags=0000000000000010
 end
 item: Install File
-  Source=${__TCLBASEDIR__}\library\opt0.4\optparse.tcl
+  Source=${__TCLBASEDIR__}\library\opt\optparse.tcl
   Destination=%MAINDIR%\lib\tcl%VER%\opt0.4\optparse.tcl
   Flags=0000000000000010
 end
 item: Install File
-  Source=${__TCLBASEDIR__}\library\http2.3\pkgIndex.tcl
+  Source=${__TCLBASEDIR__}\library\http\pkgIndex.tcl
   Destination=%MAINDIR%\lib\tcl%VER%\http2.3\pkgIndex.tcl
   Flags=0000000000000010
 end
 item: Install File
-  Source=${__TCLBASEDIR__}\library\http2.3\http.tcl
+  Source=${__TCLBASEDIR__}\library\http\http.tcl
   Destination=%MAINDIR%\lib\tcl%VER%\http2.3\http.tcl
   Flags=0000000000000010
 end
@@ -1582,7 +1577,7 @@ item: Install File
   Flags=0000000000000010
 end
 item: Install File
-  Source=${__TCLBASEDIR__}\library\reg1.0\pkgIndex.tcl
+  Source=${__TCLBASEDIR__}\library\reg\pkgIndex.tcl
   Destination=%MAINDIR%\lib\tcl%VER%\reg1.0\pkgIndex.tcl
   Flags=0000000000000010
 end
@@ -1592,7 +1587,7 @@ item: Install File
   Flags=0000000000000010
 end
 item: Install File
-  Source=${__TCLBASEDIR__}\library\dde1.1\pkgIndex.tcl
+  Source=${__TCLBASEDIR__}\library\dde\pkgIndex.tcl
   Destination=%MAINDIR%\lib\tcl%VER%\dde1.1\pkgIndex.tcl
   Flags=0000000000000010
 end
